--- a/templates/user.html
+++ b/templates/user.html
@@ -15,7 +15,7 @@
     <div class="menu-socials">
       <h1 class="menu-socials-title">Join Our Communities</h1>
       <div>
-        <button class="menu-socials-btn hoverable">
+        <button class="menu-socials-btn socials-discord hoverable">
           <svg width="30" height="30" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_197_121)">
             <path d="M33.8617 7.48683C31.3122 6.33578 28.5783 5.48775 25.7198 5.00204C25.6678 4.99267 25.6158 5.01609 25.589 5.06295C25.2373 5.67829 24.8478 6.48104 24.5752 7.11198C21.5007 6.65909 18.442 6.65909 15.4305 7.11198C15.1577 6.467 14.7541 5.67829 14.4009 5.06295C14.3741 5.01765 14.3221 4.99424 14.2701 5.00204C11.4132 5.4862 8.67926 6.33423 6.12822 7.48683C6.10613 7.4962 6.08721 7.51183 6.07465 7.53213C0.888986 15.1552 -0.531583 22.5908 0.1653 29.9343C0.168453 29.9703 0.18895 30.0047 0.21733 30.0265C3.63868 32.4988 6.95285 33.9997 10.2055 34.9945C10.2575 35.0102 10.3127 34.9915 10.3458 34.9492C11.1152 33.9153 11.8011 32.8253 12.3891 31.6788C12.4238 31.6117 12.3907 31.532 12.3198 31.5055C11.2319 31.0995 10.196 30.6043 9.19955 30.0422C9.12073 29.9968 9.11441 29.886 9.18693 29.8328C9.39661 29.6782 9.60636 29.5173 9.8066 29.355C9.84281 29.3253 9.8933 29.319 9.93588 29.3377C16.4821 32.2787 23.5692 32.2787 30.0383 29.3377C30.0808 29.3175 30.1313 29.3237 30.1692 29.3533C30.3693 29.5158 30.5792 29.6782 30.7903 29.8328C30.8628 29.886 30.8582 29.9968 30.7793 30.0422C29.7828 30.6153 28.747 31.0995 27.6575 31.504C27.5867 31.5305 27.555 31.6117 27.5897 31.6788C28.1905 32.8237 28.8763 33.9138 29.6315 34.9477C29.663 34.9915 29.7198 35.0102 29.7718 34.9945C33.0402 33.9997 36.3543 32.4988 39.7757 30.0265C39.8057 30.0047 39.8247 29.9718 39.8278 29.936C40.6618 21.446 38.4308 14.0713 33.9137 7.53368C33.9027 7.51183 33.8838 7.4962 33.8617 7.48683ZM13.3667 25.463C11.3958 25.463 9.77188 23.6825 9.77188 21.496C9.77188 19.3095 11.3643 17.5292 13.3667 17.5292C15.3848 17.5292 16.993 19.3252 16.9615 21.496C16.9615 23.6825 15.369 25.463 13.3667 25.463ZM26.6578 25.463C24.6872 25.463 23.0632 23.6825 23.0632 21.496C23.0632 19.3095 24.6555 17.5292 26.6578 17.5292C28.676 17.5292 30.2842 19.3252 30.2527 21.496C30.2527 23.6825 28.676 25.463 26.6578 25.463Z" fill="black"/>
@@ -27,7 +27,7 @@
             </defs>
           </svg>  
         </button>
-        <button class="menu-socials-btn hoverable">
+        <button class="menu-socials-btn socials-twitter hoverable">
           <svg width="30" height="30" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_241_22)">
             <path d="M36.9365 9.42654C35.6641 9.98937 34.3148 10.359 32.9332 10.5232C34.3894 9.65227 35.4794 8.28157 35.9998 6.66654C34.6332 7.47988 33.1348 8.04988 31.5732 8.35821C30.5242 7.23584 29.1338 6.49148 27.6181 6.24085C26.1024 5.99022 24.5464 6.24736 23.192 6.9723C21.8375 7.69724 20.7605 8.84935 20.1284 10.2495C19.4962 11.6497 19.3444 13.2195 19.6965 14.7149C16.925 14.576 14.2137 13.8557 11.7387 12.601C9.26358 11.3462 7.08006 9.58496 5.32984 7.43154C4.71033 8.49563 4.38477 9.70526 4.38651 10.9365C4.38651 13.3532 5.61651 15.4882 7.48651 16.7382C6.37986 16.7034 5.29756 16.4045 4.32984 15.8665V15.9532C4.33018 17.5627 4.88713 19.1226 5.90626 20.3683C6.92539 21.614 8.34398 22.469 9.92151 22.7882C8.8942 23.0666 7.81702 23.1076 6.77151 22.9082C7.21629 24.2936 8.08319 25.5052 9.25083 26.3734C10.4185 27.2416 11.8284 27.7229 13.2832 27.7499C11.8373 28.8854 10.1818 29.7248 8.41131 30.2202C6.64082 30.7155 4.79006 30.857 2.96484 30.6365C6.15101 32.6856 9.86001 33.7734 13.6482 33.7699C26.4698 33.7699 33.4815 23.1482 33.4815 13.9365C33.4815 13.6365 33.4732 13.3332 33.4598 13.0365C34.8246 12.0502 36.0025 10.8282 36.9382 9.42821L36.9365 9.42654Z" fill="black"/>
@@ -39,7 +39,7 @@
             </defs>
           </svg>
         </button>
-        <button class="menu-socials-btn hoverable">
+        <button class="menu-socials-btn socials-insta hoverable">
           <svg width="30" height="30" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M28.3335 3.3335H11.6668C7.06446 3.3335 3.3335 7.06446 3.3335 11.6668V28.3335C3.3335 32.9359 7.06446 36.6668 11.6668 36.6668H28.3335C32.9359 36.6668 36.6668 32.9359 36.6668 28.3335V11.6668C36.6668 7.06446 32.9359 3.3335 28.3335 3.3335Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M26.6665 18.95C26.8722 20.3371 26.6353 21.7537 25.9894 22.9984C25.3436 24.243 24.3217 25.2524 23.0692 25.8828C21.8167 26.5132 20.3972 26.7327 19.0128 26.5099C17.6284 26.2871 16.3494 25.6335 15.3579 24.6419C14.3664 23.6504 13.7127 22.3715 13.4899 20.987C13.2672 19.6026 13.4866 18.1832 14.117 16.9306C14.7475 15.6781 15.7568 14.6562 17.0015 14.0104C18.2461 13.3646 19.6628 13.1277 21.0498 13.3333C22.4647 13.5432 23.7746 14.2025 24.786 15.2139C25.7974 16.2253 26.4567 17.5351 26.6665 18.95Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -61,7 +61,7 @@
     </svg>
     <center>
     <div class="menu-links">
-      <div class="menu-link">
+      <div class="menu-link menu-link-home">
         <p class="menu-link-name hoverable">Home</p>
         <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_197_138)">
@@ -74,7 +74,7 @@
           </defs>
         </svg>  
       </div>
-      <div class="menu-link">
+      <div class="menu-link menu-link-discover">
         <p class="menu-link-name hoverable">Discover</p>
         <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_197_138)">
@@ -87,7 +87,7 @@
           </defs>
         </svg>  
       </div>
-      <div class="menu-link">
+      <div class="menu-link menu-link-courses">
         <p class="menu-link-name hoverable">Courses</p>
         <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_197_138)">
@@ -100,7 +100,7 @@
           </defs>
         </svg>  
       </div>
-      <div class="menu-link">
+      <div class="menu-link menu-link-blog">
         <p class="menu-link-name hoverable">Blog</p>
         <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_197_138)">
@@ -113,7 +113,7 @@
           </defs>
         </svg>  
       </div>
-      <div class="menu-link">
+      <div class="menu-link menu-link-subscribe">
         <p class="menu-link-name hoverable">Subscribe</p>
         <svg width="39" height="39" class="menu-link-vector hoverable" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_197_138)">
@@ -126,6 +126,7 @@
           </defs>
         </svg>  
       </div>
+      
       {% if 'loggedin' in session %}
       <svg width="30" height="30" class="menu-logout hoverable" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_237_10)">
@@ -138,7 +139,7 @@
         </defs>
       </svg>
       {% else %}
-      <button class="auth-btn-2 to-login">Log In</button>
+      <button class="auth-btn-2 to-login menu-to-login">Log In</button>
       {% endif %}
         
     </div>
