--- a/static/style.css
+++ b/static/style.css
@@ -2154,47 +2154,139 @@ canvas{
     display: none;
 }
 
-.courses-dash{
+
+.courses-up{
     margin-top: 8em;
     margin-left: 5em;
+    margin-right: 5em;
 }
 
-.courses-dash-top-title{
-    font-size: 1.5em;
-    font-family: 'gilroy-700';
-    margin-top: 1.6em;
-}
-
-.courses-dash-stats-uprofile{
-    margin-left: 2em;
-    margin-top: 1em;
-}
-
-.cdsup-img{
-    display: inline-block;
-    vertical-align: middle;
-    width: 3.5em;
-    max-width: 4em;
+.cu-img{
     border-radius: 50%;
-    height: 3.5em;
-    max-height: 4em;
+    width: 4em;
+    display: inline-block;
+    margin-right: 1em;
+    vertical-align: middle;
+    height: 4em;
 }
 
-.cdsup-info{
+.cu-name{
+    font-family: 'gilroy-700';
+    margin-block-start: 0.4em;
+    margin-block-end: 0;
+}
+.cu-uname{
+    font-family: 'gilroy-600';
+    margin-block-start: 0.4em;
+    color: rgb(207, 207, 207);
+    font-size: .8em;
+    margin-block-end: 0;
+}
+
+   progress::-moz-progress-bar {
+    border-radius: 10px;
+    background-color: 00FF85;
+}
+
+progress::-webkit-progress-value {
+    border-radius: 10px;
+    background-color: 00FF85;
+    height: 5px;
+}
+
+progress {
+    background-color: #00FF85;
+    border-radius: 10px;
+    height: 5px;
+}
+
+progress::-webkit-progress-bar {
+    background-color: #ffffff;
+    border-radius: 10px;
+    height: 5px;
+}
+
+progress::-webkit-progress-value {
+    border-radius: 10px;
+    height: 5px;
+    background-color: #00FF85 !important;
+}
+
+.cu-stats{
     display: inline-block;
     vertical-align: middle;
-    margin-left: .5em;
 }
 
-.cdsup-info-name{
-    font-size: 1.1em;
-    margin-block-end: 0.3em;
+.remaining{
+    font-family: 'gilroy-400';
+    color: rgb(189, 189, 189);
+}
+
+.lup-head{
     font-family: 'gilroy-700';
+    margin-top: 2em;
+    margin-block-end: 0;
+
+    font-size: 1.5em;
+}
+.cu-stats{
+    padding-right: 2em;
+    float: right;
+}
+.cu-stat{
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5em;
+    width: 10em;
 }
 
-.cdsup-info-uname{
-    font-family: 'gilroy-600';
-    font-size: .8em;
-    color: gray;
+.cu-stat-val{
+    font-family: 'gilroy-700';
+    color: white;
+    font-size: 2.5em;
     margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.cu-stat-desc{
+    font-family: 'gilroy-700';
+    color: #c4c4c4;
+    font-size: .9em;
+    margin-block-start: 0;
+}
+
+.cu-goals{
+    display: inline-block;
+    width: 20em;
+    vertical-align: top;
+}
+
+.course{
+    width: 20em;
+    height: 14em;
+    background-color: #1e1e1e;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 1em;
+    margin-right: 3em;
+    padding: 1em 1em 1em 1em;
+    margin-bottom: 1em;
+    
+}
+
+.mycourses{
+    margin-top: 3em;
+    margin-left: 5em;
+    margin-right: 5em;
+}
+
+
+.coursenamee{
+    font-size: 1.3em;
+}
+
+.coursethumb{
+    width: 17em;
+    height: 10em;
+    border-radius: 1em;
 }
