--- a/templates/courses.html
+++ b/templates/courses.html
@@ -323,6 +323,9 @@
         </a>
         {% endif %}
       </div>
+      <div class="browse-courses">
+        <h2 class="cu-title">Owned</h2>
+      </div>
 </body>
 </html>
 <div class="cursor">
