--- a/static/style.css
+++ b/static/style.css
@@ -2282,11 +2282,18 @@ progress::-webkit-progress-value {
 
 
 .coursenamee{
-    font-size: 1.3em;
+    font-size: 1.1em;
+    font-family: 'gilroy-600';
 }
 
 .coursethumb{
     width: 17em;
     height: 10em;
     border-radius: 1em;
+}
+
+.browse-courses{
+    margin-top: 3em;
+    margin-left: 5em;
+    margin-right: 5em;
 }
